Add different tests